Add domain guard restrions to alumni features
